Fix center align for mobile viewing

--- a/src/Content.scss
+++ b/src/Content.scss
@@ -102,6 +102,7 @@ $large_viewport: 1500px;
 .IntroductionSection {
   color: #fff;
   background-color: $color_2;
+  width: 100%;
   padding: 0.75em 11vw;
   margin: auto;
 
@@ -187,8 +188,9 @@ $large_viewport: 1500px;
   }
 
   .avatarContainer {
-    text-align: right;
+    // text-align: right;
     display: flex;
+    justify-content: center;
 
     img {
       width: 25em;
@@ -210,16 +212,18 @@ $large_viewport: 1500px;
   }
 
   @media screen and (max-width: $small_viewport) {
-    width: 100%;
+    width: 100vw;
     flex-direction: column;
+    justify-content: center;
 
     .aboutMe {
       display: flex;
       flex-direction: column;
-
+  
       .greeting,
       .name,
       .description {
+        padding-left: 12.5%;
         border: none;
       }
 
@@ -229,14 +233,13 @@ $large_viewport: 1500px;
       }
 
       .description {
-        width: 80%;
+        width: 100%;
       }
 
       .downloadCVBtn {
-        position: relative;
-        left: 25%;
+        justify-self: center;
         padding: 0.6em 1em;
-        margin: 2em 0;
+        margin: 2em auto;
       }
     }
   }
@@ -258,6 +261,11 @@ $large_viewport: 1500px;
 
   @media screen and (max-width: $small_viewport) {
     width: 100svw;
+
+    h1 {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   .experienceBoard {
@@ -340,12 +348,13 @@ $large_viewport: 1500px;
   background-color: $color_2;
   position: relative;
 
-  h1 {
+  .ProjectSectionTitle {
     color: rgba(255, 255, 255, 0.5);
     font-size: 10svw;
+    font-weight: 600;
     position: absolute;
-    top: 2.88em;
-    right: -2.75em;
+    top: 2.75em;
+    right: -2.6em;
     transform: rotate(90deg);
   }
 
@@ -420,19 +429,19 @@ $large_viewport: 1500px;
   }
 
   @media screen and (min-width: $large_viewport) {
-    h1 {
-      right: -2.75em;
+    .ProjectSectionTitle {
+      right: -2.55em;
     }
   }
 
   @media screen and (max-width: $small_viewport) {
 
-    h1 {
+    .ProjectSectionTitle {
       font-size: 11.5svw;
       text-align: center;
-      position: relative;
-      top: 0.8em;
-      left: -1em;
+      width: 100svw;
+      position: static;
+      padding-top: 0.75em;
       transform: none;
     }
 
